@startuml
!pragma layout smetana

class Main{
+ static void main(String[] args)
}

class Property
{
    - int seriesID
    - Player owner
    + Property(ID, label, cost, income, serieID)

}


class Game{
 - String name
 - ArrayList<Player> players
 - Player currentPlayer
 - Board board
 - Dice dice
 'utilities
  - ArrayList<String> listOfActions
  - String playerDataPath
  - TextUI ui
  - FileIO io
  'Contructor
 + Game(String name)
 'Methods
 - void setup()
 + void runDialog()
 - void createPlayer(String name, int balance)
 - void displayPlayers()
 - void registerPlayers()
 - void runGameLoop()
 + void throwAndMove()
 - void landAndAct()
 - void endGame()
 + void collect(int amount)
 'collect(int amount): gennemløber listen af spillere:
   'for (Player p:players)
   'I loop’et, træk beløbet fra alle andre spillere end currentPlayer:
   'p.pay(amount, this);
}

class Player{
- String name
- Account account
- ArrayList<Field> deeds
+ Player(String name, int startAmount)
+ int updatePosition(int value)
- boolean startPassed()
+ boolean buyProperty(Field f)
+ boolean pay(int amount)
+ boolean pay(int amount, Player recipient)
+ void recieve(int amount)
+ String toString()
+ String getName()
+ int getBalance()
+ int getPosition()
}
class Account{
- int balance
+ void deposit(int amount)
+ boolean withdraw(int amount)
+ int getBalance()
}
package "util" {
class FileIO{
+ ArrayList<String> readPlayerData(String path)
+ void saveData(ArrayList<Player> players, String path)
+ String[] readBoardData(String path, int length).
}

class TextUI{
- Scanner scanner
+ void displayMsg(String s)
+ int promptNumeric(String msg)
+ String promptText(String msg)
+ int promptChoice(String msg, ArrayList<String> list)
+ boolean promptBinary(String msg )
}
}
abstract class Field{
- String label
 - int ID
 - int cost
 - int income
 - String option
 + Field(ID, label, cost, income)
 + String toString()
 + String onLand(Player p)
 + String processResponse(Player p, boolean response)
 # String onAccept(Player p)
 # String onReject(Player p)
 # setOption(String option)
 + String getOption()
}
class Board{
 - Field[] fields
 - {static} CardDeck cardDeck
 + Board(String [] fields, String [] cards])
 - void createFields(String [] data)
 + Field getField(int id)
}

class CardDeck {
- String[] carddata
- Card[] cards
+ CardDeck(String[] carddata)
+ Card getNext()
+ void createCards()
}
class Card{
-String message
-int income
-int cost
-String event
+Card(String message, int income, int cost, String event)
+String toString()
+ int getCost()
+ int getIncome()
+ String getEvent()
+ String getMessage()
}

class Dice{
 +boolean isDouble
 +int rollDiceSum()
 }

Game *-- TextUI
Main *-- Game
Game *-- Player
Game *-- FileIO
Player *-- Account
Game *-- Board
Board *-- Field
Game *-- CardDeck
CardDeck *-- Card
Game *-- Dice
Player *-- Card
Player *-- Field
Field <|-- Property
Property <|-- Brewery
Property <|-- ShippingLine
Property <|-- Plot
Field <|-- Prison
Field <|-- Tax
Field <|-- Parking
Field <|-- Visit
Field <|-- Start
Field <|-- Chance



@enduml